test/invalid/double_quote_string_unfinished.d
//T error: double_quote_string_unfinished.d:4:11:
//T error: Expected '"' to end string literal, not the end of the file.

string s = "plop
